Update to cwtoolbox 0.10.4

--- a/lecture_0/1_test_setup.ipynb
+++ b/lecture_0/1_test_setup.ipynb
@@ -124,7 +124,7 @@
     "data = capture_device.capture(\n",
     "    number_of_traces=1,\n",
     "    number_of_samples=100,\n",
-    "    input=lambda _: [],\n",
+    "    input={\"input\": lambda _: []},\n",
     ")"
    ]
   },
