--- a/lecture_2/1_passwordcheck.ipynb
+++ b/lecture_2/1_passwordcheck.ipynb
@@ -55,7 +55,7 @@
     "data = capture_device.capture(\n",
     "    number_of_traces=1,\n",
     "    number_of_samples=100,\n",
-    "    input=lambda _: 8 * [0],\n",
+    "    input={\"input\": lambda _: 8 * [0]},\n",
     ")"
    ]
   },
@@ -118,7 +118,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 ('chipwhisperer-td5n7f84')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -132,12 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "36760b1de54f02795c2144c8e36ca6fc5439200debad8ef46d119beb88a8f8a2"
-   }
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
