Adjust to cwtoolbox v0.10.5

--- a/lecture_2/1_passwordcheck.ipynb
+++ b/lecture_2/1_passwordcheck.ipynb
@@ -55,7 +55,7 @@
     "data = capture_device.capture(\n",
     "    number_of_traces=1,\n",
     "    number_of_samples=100,\n",
-    "    input={\"input\": lambda _: 8 * [0]},\n",
+    "    input=lambda _: 8 * b\"a\"\n",
     ")"
    ]
   },
