--- a/lecture_3/1_differential_power_analysis.ipynb
+++ b/lecture_3/1_differential_power_analysis.ipynb
@@ -81,7 +81,7 @@
     "\n",
     "The file [./sbox_lookup.c](./sbox_lookup.c) contains the essentials of an AES SBox lookup, i.e. the step SubBytes in an AES encryption.\n",
     "\n",
-    "1. Record one trace using `input={\"input\": lambda _: 16 * [0]}`.\n",
+    "1. Record one trace using `input=lambda _: 16 * [0]`.\n",
     "2. Plot the trace. What can you see? Any repeating patterns?\n",
     "3. Open the corresponding assembly listing file [generic_simpleserial-CWLITEXMEGA.lss](./build/generic_simpleserial-CWLITEXMEGA.lss) and understand the instructions in the function `run`.\n",
     "\n",
@@ -126,7 +126,7 @@
     "\n",
     "In this exercise we don't want to reveal the key but understand why differences are good to reveal data.\n",
     "\n",
-    "1. Record 1000 traces using random input for the first input byte, i.e. use `input={\"input\": lambda _: [random.randint(0, 255)] + 15 * [0]}`.\n",
+    "1. Record 1000 traces using random input for the first input byte, i.e. use `input=lambda _: [random.randint(0, 255)] + 15 * [0]`.\n",
     "2. Divide the data into two sets `data_msb_0` and `data_msb_1` depending on the msb of the random byte. </br>\n",
     "   Hints:\n",
     "   - The first byte of `input` of trace `i` can be accessed using `data[i][\"input\"][0]`.\n",
