--- a/lecture_0/1_test_setup.ipynb
+++ b/lecture_0/1_test_setup.ipynb
@@ -108,7 +108,7 @@
     "\n",
     "The following lines capture 1 trace containing 10 `nop` instructions.\n",
     "\n",
-    "The purpose of `inputfunction` will become clear in the next Notebooks.\n",
+    "The purpose of `input` will become clear in the next Notebooks.\n",
     "\n",
     "Press thumbs that it works ;-)"
    ]
@@ -124,7 +124,7 @@
     "data = capture_device.capture(\n",
     "    number_of_traces=1,\n",
     "    number_of_samples=100,\n",
-    "    input={\"input\": lambda _: []},\n",
+    "    input=lambda _: b\"\",\n",
     ")"
    ]
   },
@@ -162,7 +162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 ('chipwhisperer-td5n7f84')",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -176,12 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "36760b1de54f02795c2144c8e36ca6fc5439200debad8ef46d119beb88a8f8a2"
-   }
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
